--- a/docs/tutorials/chsh-inequality.ipynb
+++ b/docs/tutorials/chsh-inequality.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "The CHSH inequality, named after the authors Clauser, Horne, Shimony, and Holt, is used to experimentally prove Bell's theorem (1969). This theorem asserts that local hidden variable theories cannot account for some consequences of entanglement in quantum mechanics. The violation of the CHSH inequality is used to show that quantum mechanics is incompatible with local hidden-variable theories. This is an important experiment for understanding the foundation of quantum mechanics.\n",
     "\n",
-    "The 2022 Nobel Prize for Physics was awarded to Alain Aspect, John Clauser and Anton Zeilinger in part for their pioneering work in quantum information science, and in particular, for their experiments with entangled photons demonstrating violation of Bell’s inequalities.\n"
+    "The 2022 Nobel Prize for Physics was awarded to Alain Aspect, John Clauser and Anton Zeilinger in part for their pioneering work in quantum information science, and in particular, for their experiments with entangled photons demonstrating violation of Bell’s inequalities."
    ]
   },
   {
@@ -165,7 +165,9 @@
    "source": [
     "# To run on hardware, select the backend with the fewest number of jobs in the queue\n",
     "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)\n",
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=127\n",
+    ")\n",
     "backend.name"
    ]
   },
@@ -250,10 +252,14 @@
    "outputs": [],
    "source": [
     "# <CHSH1> = <AB> - <Ab> + <aB> + <ab> -> <ZZ> - <ZX> + <XZ> + <XX>\n",
-    "observable1 = SparsePauliOp.from_list([(\"ZZ\", 1), (\"ZX\", -1), (\"XZ\", 1), (\"XX\", 1)])\n",
+    "observable1 = SparsePauliOp.from_list(\n",
+    "    [(\"ZZ\", 1), (\"ZX\", -1), (\"XZ\", 1), (\"XX\", 1)]\n",
+    ")\n",
     "\n",
     "# <CHSH2> = <AB> + <Ab> - <aB> + <ab> -> <ZZ> + <ZX> - <XZ> + <XX>\n",
-    "observable2 = SparsePauliOp.from_list([(\"ZZ\", 1), (\"ZX\", 1), (\"XZ\", -1), (\"XX\", 1)])"
+    "observable2 = SparsePauliOp.from_list(\n",
+    "    [(\"ZZ\", 1), (\"ZX\", 1), (\"XZ\", -1), (\"XX\", 1)]\n",
+    ")"
    ]
   },
   {
@@ -493,6 +499,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
+  "platform": "cloud",
   "vscode": {
    "interpreter": {
     "hash": "1910f834ba40d1043b9ae723a4d216fb6c2faf55822807adca52e5ece8e3f1c8"
