--- a/docs/tutorials/gate_cutting.ipynb
+++ b/docs/tutorials/gate_cutting.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Scaling Periodic Boundary Problems with Circuit Cutting\n",
-    "*Usage estimate: 2 minutes on IBM Brisbane (NOTE: This is an estimate only. Your runtime may vary.)*\n"
+    "*Usage estimate: 2 minutes on IBM Brisbane (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
@@ -18,7 +18,7 @@
     "\n",
     "In this notebook, we consider the simulation of a periodic chain of qubits where there is two qubit operation between every two adjancent qubits, including the first and the last ones. Periodic chains are often found in physics and chemistry problems such as Ising models, molecular simulation, etc.\n",
     "\n",
-    "Current IBM Quantum devices are planar. It is possible to embed some periodic chains on the topology directly where the first and last qubits are neighbours. However, for big enough problems, the first and last qubits can be far apart, thus requiring many SWAP gates for the 2-qubit operation between these two qubits. Such a periodic boundary problem has been studied in <a href=\"https://arxiv.org/abs/2402.17833\">this paper</a>. \n",
+    "Current IBM Quantum devices are planar. It is possible to embed some periodic chains on the topology directly where the first and last qubits are neighbours. However, for big enough problems, the first and last qubits can be far apart, thus requiring many SWAP gates for the 2-qubit operation between these two qubits. Such a periodic boundary problem has been studied in <a href=\"https://arxiv.org/abs/2402.17833\">this paper</a>.\n",
     "\n",
     "In this notebook we show the usage of circuit cutting to deal with such a utility scale periodic chain problem where the first and last qubits are not neighbours. Cutting this long range connectivity avoids the extra SWAP gates at the cost of executing multiple instances of the circuit, and some classical postprocessing. In summary, cutting can be incorporated to logically calculate the long distance 2-qubit operations. In other words, this approach leads to an effective increase in the connectivity of the coupling map, thus leading to a fewer number of SWAP gates.\n",
     "\n",
@@ -59,16 +59,24 @@
     "import matplotlib as mpl\n",
     "\n",
     "from qiskit.transpiler import PassManager\n",
-    "from qiskit.transpiler.passes import BasisTranslator, Optimize1qGatesDecomposition\n",
-    "from qiskit.circuit.equivalence_library import SessionEquivalenceLibrary as sel\n",
-    "from qiskit.transpiler.passes import BasisTranslator\n",
+    "from qiskit.transpiler.passes import (\n",
+    "    BasisTranslator,\n",
+    "    Optimize1qGatesDecomposition,\n",
+    ")\n",
+    "from qiskit.circuit.equivalence_library import (\n",
+    "    SessionEquivalenceLibrary as sel,\n",
+    ")\n",
     "from qiskit.converters import circuit_to_dag, dag_to_circuit\n",
     "from qiskit.result import sampled_expectation_value\n",
     "from qiskit.quantum_info import SparsePauliOp\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "from qiskit.circuit.library import TwoLocal\n",
     "\n",
-    "from qiskit_addon_cutting import cut_gates, generate_cutting_experiments, reconstruct_expectation_values\n",
+    "from qiskit_addon_cutting import (\n",
+    "    cut_gates,\n",
+    "    generate_cutting_experiments,\n",
+    "    reconstruct_expectation_values,\n",
+    ")\n",
     "\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
@@ -114,7 +122,9 @@
    "outputs": [],
    "source": [
     "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits = 127)"
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=127\n",
+    ")"
    ]
   },
   {
@@ -143,13 +153,117 @@
     }
    ],
    "source": [
-    "init_layout = [13,12,11,10,9,8,7,6,5,4,3,2,1,0,\n",
-    "               14,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,\n",
-    "               36,51,50,49,48,47,46,45,44,43,42,41,40,39,38,37,\n",
-    "               52,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,\n",
-    "               74,89,88,87,86,85,84,83,82,81,80,79,78,77,76,75,\n",
-    "               90,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,\n",
-    "               112,126,125,124,123,122,121,120,119,118,117,116,115,114,113]\n",
+    "init_layout = [\n",
+    "    13,\n",
+    "    12,\n",
+    "    11,\n",
+    "    10,\n",
+    "    9,\n",
+    "    8,\n",
+    "    7,\n",
+    "    6,\n",
+    "    5,\n",
+    "    4,\n",
+    "    3,\n",
+    "    2,\n",
+    "    1,\n",
+    "    0,\n",
+    "    14,\n",
+    "    18,\n",
+    "    19,\n",
+    "    20,\n",
+    "    21,\n",
+    "    22,\n",
+    "    23,\n",
+    "    24,\n",
+    "    25,\n",
+    "    26,\n",
+    "    27,\n",
+    "    28,\n",
+    "    29,\n",
+    "    30,\n",
+    "    31,\n",
+    "    32,\n",
+    "    36,\n",
+    "    51,\n",
+    "    50,\n",
+    "    49,\n",
+    "    48,\n",
+    "    47,\n",
+    "    46,\n",
+    "    45,\n",
+    "    44,\n",
+    "    43,\n",
+    "    42,\n",
+    "    41,\n",
+    "    40,\n",
+    "    39,\n",
+    "    38,\n",
+    "    37,\n",
+    "    52,\n",
+    "    56,\n",
+    "    57,\n",
+    "    58,\n",
+    "    59,\n",
+    "    60,\n",
+    "    61,\n",
+    "    62,\n",
+    "    63,\n",
+    "    64,\n",
+    "    65,\n",
+    "    66,\n",
+    "    67,\n",
+    "    68,\n",
+    "    69,\n",
+    "    70,\n",
+    "    74,\n",
+    "    89,\n",
+    "    88,\n",
+    "    87,\n",
+    "    86,\n",
+    "    85,\n",
+    "    84,\n",
+    "    83,\n",
+    "    82,\n",
+    "    81,\n",
+    "    80,\n",
+    "    79,\n",
+    "    78,\n",
+    "    77,\n",
+    "    76,\n",
+    "    75,\n",
+    "    90,\n",
+    "    94,\n",
+    "    95,\n",
+    "    96,\n",
+    "    97,\n",
+    "    98,\n",
+    "    99,\n",
+    "    100,\n",
+    "    101,\n",
+    "    102,\n",
+    "    103,\n",
+    "    104,\n",
+    "    105,\n",
+    "    106,\n",
+    "    107,\n",
+    "    108,\n",
+    "    112,\n",
+    "    126,\n",
+    "    125,\n",
+    "    124,\n",
+    "    123,\n",
+    "    122,\n",
+    "    121,\n",
+    "    120,\n",
+    "    119,\n",
+    "    118,\n",
+    "    117,\n",
+    "    116,\n",
+    "    115,\n",
+    "    114,\n",
+    "    113,\n",
+    "]\n",
     "\n",
     "# the number of qubits in the circuit is governed by the length of the initial layout\n",
     "num_qubits = len(init_layout)\n",
@@ -171,8 +285,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coupling_map = [(i,i+1) for i in range(0, len(init_layout)-1)]\n",
-    "coupling_map.append((len(init_layout)-1, 0)) # adding in the periodic connectivity"
+    "coupling_map = [(i, i + 1) for i in range(0, len(init_layout) - 1)]\n",
+    "coupling_map.append(\n",
+    "    (len(init_layout) - 1, 0)\n",
+    ")  # adding in the periodic connectivity"
    ]
   },
   {
@@ -193,10 +309,10 @@
     "num_reps = 2\n",
     "entangler_map = []\n",
     "\n",
-    "for even_edge in coupling_map[0:len(coupling_map):2]:\n",
+    "for even_edge in coupling_map[0 : len(coupling_map) : 2]:\n",
     "    entangler_map.append(even_edge)\n",
     "\n",
-    "for odd_edge in coupling_map[1:len(coupling_map):2]:\n",
+    "for odd_edge in coupling_map[1 : len(coupling_map) : 2]:\n",
     "    entangler_map.append(odd_edge)"
    ]
   },
@@ -219,8 +335,13 @@
     }
    ],
    "source": [
-    "\n",
-    "ansatz = TwoLocal(num_qubits=num_qubits, rotation_blocks='rx', entanglement_blocks='cx', entanglement=entangler_map, reps=num_reps).decompose()\n",
+    "ansatz = TwoLocal(\n",
+    "    num_qubits=num_qubits,\n",
+    "    rotation_blocks=\"rx\",\n",
+    "    entanglement_blocks=\"cx\",\n",
+    "    entanglement=entangler_map,\n",
+    "    reps=num_reps,\n",
+    ").decompose()\n",
     "ansatz.draw(\"mpl\", fold=-1)"
    ]
   },
@@ -241,8 +362,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params_last_layer = [np.pi]*ansatz.num_qubits\n",
-    "params = [0]*(ansatz.num_parameters-ansatz.num_qubits)\n",
+    "params_last_layer = [np.pi] * ansatz.num_qubits\n",
+    "params = [0] * (ansatz.num_parameters - ansatz.num_qubits)\n",
     "params.extend(params_last_layer)\n",
     "\n",
     "ansatz.assign_parameters(params, inplace=True)"
@@ -261,7 +382,7 @@
    "id": "6a359888-c685-4b28-b2d4-c29b89448e3b",
    "metadata": {},
    "source": [
-    "To quantify the benefits of gate cutting we measure the expectation values of the observables $\\frac{1}{n}\\sum_{i=1}^n \\langle Z_i \\rangle$ and $\\frac{1}{n-1}\\sum_{i=1}^{n-1} \\langle Z_i Z_{i+1} \\rangle$. As discussed before, the ideal expectation values are $-1$ and $+1$ respectively. "
+    "To quantify the benefits of gate cutting we measure the expectation values of the observables $\\frac{1}{n}\\sum_{i=1}^n \\langle Z_i \\rangle$ and $\\frac{1}{n-1}\\sum_{i=1}^{n-1} \\langle Z_i Z_{i+1} \\rangle$. As discussed before, the ideal expectation values are $-1$ and $+1$ respectively."
    ]
   },
   {
@@ -274,14 +395,14 @@
     "observables = []\n",
     "\n",
     "for i in range(num_qubits):\n",
-    "    obs = 'I'*(i)+'Z'+'I'*(num_qubits-i-1)\n",
+    "    obs = \"I\" * (i) + \"Z\" + \"I\" * (num_qubits - i - 1)\n",
     "    observables.append(obs)\n",
     "\n",
     "for i in range(num_qubits):\n",
-    "    if i == num_qubits-1:\n",
-    "        obs = 'Z'+'I'*(num_qubits-2) + 'Z'\n",
+    "    if i == num_qubits - 1:\n",
+    "        obs = \"Z\" + \"I\" * (num_qubits - 2) + \"Z\"\n",
     "    else:\n",
-    "        obs = 'I'*i+'ZZ'+'I'*(num_qubits-i-2)\n",
+    "        obs = \"I\" * i + \"ZZ\" + \"I\" * (num_qubits - i - 2)\n",
     "    observables.append(obs)\n",
     "\n",
     "observables = SparsePauliOp(observables)\n",
@@ -309,7 +430,7 @@
    "source": [
     "#### Transpile the circuit\n",
     "\n",
-    "Note that the circuit can be transpiled at this stage, or after cutting. If we transpile after cutting, that will require us to transpile each of the subexperiments generated due to the sampling overhead. Therefore, it is more prudent to transpile at this stage to reduce the overhead of transpilation. \n",
+    "Note that the circuit can be transpiled at this stage, or after cutting. If we transpile after cutting, that will require us to transpile each of the subexperiments generated due to the sampling overhead. Therefore, it is more prudent to transpile at this stage to reduce the overhead of transpilation.\n",
     "\n",
     "However, if transpilation is done at this stage with native hardware connectivity, the transpiler will append multiple SWAP gates to place the periodic 2-qubit operation – obfuscating the benefits of circuit cutting. To avoid this problem we can leverage that we know the exact gates that needs to be cut. Specifically, we can create a virtual coupling map by adding virtual connections between far away qubits to accommodate these periodic 2-qubit gates. This will ensure that the circuit can be transpiled at this stage without incorporating the extra SWAP gates."
    ]
@@ -325,8 +446,8 @@
     "\n",
     "# create a virtual coupling map with long range connectivity\n",
     "virtual_coupling_map = coupling_map.copy()\n",
-    "virtual_coupling_map.append([init_layout[-1],init_layout[0]])\n",
-    "virtual_coupling_map.append([init_layout[0],init_layout[-1]])"
+    "virtual_coupling_map.append([init_layout[-1], init_layout[0]])\n",
+    "virtual_coupling_map.append([init_layout[0], init_layout[-1]])"
    ]
   },
   {
@@ -348,10 +469,15 @@
     }
    ],
    "source": [
-    "pm_virtual = generate_preset_pass_manager(optimization_level=1, coupling_map=virtual_coupling_map, initial_layout=init_layout, basis_gates=backend.configuration().basis_gates)\n",
+    "pm_virtual = generate_preset_pass_manager(\n",
+    "    optimization_level=1,\n",
+    "    coupling_map=virtual_coupling_map,\n",
+    "    initial_layout=init_layout,\n",
+    "    basis_gates=backend.configuration().basis_gates,\n",
+    ")\n",
     "\n",
     "virtual_mapped_circuit = pm_virtual.run(ansatz)\n",
-    "virtual_mapped_circuit.draw('mpl', fold=-1, idle_wires=False)"
+    "virtual_mapped_circuit.draw(\"mpl\", fold=-1, idle_wires=False)"
    ]
   },
   {
@@ -381,7 +507,8 @@
     "cut_indices = [\n",
     "    i\n",
     "    for i, instruction in enumerate(virtual_mapped_circuit.data)\n",
-    "    if {virtual_mapped_circuit.find_bit(q)[0] for q in instruction.qubits} == {init_layout[-1],init_layout[0]}\n",
+    "    if {virtual_mapped_circuit.find_bit(q)[0] for q in instruction.qubits}\n",
+    "    == {init_layout[-1], init_layout[0]}\n",
     "]"
    ]
   },
@@ -420,7 +547,9 @@
    "source": [
     "qpd_circuit, bases = cut_gates(virtual_mapped_circuit, cut_indices)\n",
     "subexperiments, coefficients = generate_cutting_experiments(\n",
-    "    circuits=qpd_circuit, observables=trans_observables.paulis, num_samples=np.inf\n",
+    "    circuits=qpd_circuit,\n",
+    "    observables=trans_observables.paulis,\n",
+    "    num_samples=np.inf,\n",
     ")"
    ]
   },
@@ -449,7 +578,7 @@
     }
    ],
    "source": [
-    "print(f'Number of subexperiments is {len(subexperiments)} = 6**{num_reps}')"
+    "print(f\"Number of subexperiments is {len(subexperiments)} = 6**{num_reps}\")"
    ]
   },
   {
@@ -480,17 +609,19 @@
    "outputs": [],
    "source": [
     "pass_ = PassManager(\n",
-    "    [\n",
-    "        Optimize1qGatesDecomposition(basis=backend.configuration().basis_gates)\n",
-    "    ]\n",
+    "    [Optimize1qGatesDecomposition(basis=backend.configuration().basis_gates)]\n",
     ")\n",
     "\n",
-    "subexperiments = pass_.run([dag_to_circuit(\n",
+    "subexperiments = pass_.run(\n",
+    "    [\n",
+    "        dag_to_circuit(\n",
     "            BasisTranslator(sel, target_basis=backend.basis_gates).run(\n",
     "                circuit_to_dag(circ)\n",
     "            )\n",
     "        )\n",
-    "        for circ in subexperiments])"
+    "        for circ in subexperiments\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -555,7 +686,7 @@
     "    sampler = SamplerV2(options=options)\n",
     "    cut_job = sampler.run(subexperiments)\n",
     "\n",
-    "print(f'Job ID {cut_job.job_id()}')"
+    "print(f\"Job ID {cut_job.job_id()}\")"
    ]
   },
   {
@@ -621,8 +752,8 @@
     "cut_weight_1 = np.mean(reconstructed_expvals[:num_qubits])\n",
     "cut_weight_2 = np.mean(reconstructed_expvals[num_qubits:])\n",
     "\n",
-    "print(f'Average of weight-1 expectation values is {cut_weight_1}')\n",
-    "print(f'Average of weight-2 expectation values is {cut_weight_2}')"
+    "print(f\"Average of weight-1 expectation values is {cut_weight_1}\")\n",
+    "print(f\"Average of weight-2 expectation values is {cut_weight_2}\")"
    ]
   },
   {
@@ -651,7 +782,9 @@
     "if ansatz.num_clbits == 0:\n",
     "    ansatz.measure_all()\n",
     "\n",
-    "pm_uncut = generate_preset_pass_manager(optimization_level=1, backend=backend, initial_layout=init_layout)\n",
+    "pm_uncut = generate_preset_pass_manager(\n",
+    "    optimization_level=1, backend=backend, initial_layout=init_layout\n",
+    ")\n",
     "\n",
     "transpiled_circuit = pm_uncut.run(ansatz)"
    ]
@@ -683,7 +816,7 @@
    ],
    "source": [
     "uncut_job_id = uncut_job.job_id()\n",
-    "print(f'The job id for the uncut clifford circuit is {uncut_job_id}')"
+    "print(f\"The job id for the uncut clifford circuit is {uncut_job_id}\")"
    ]
   },
   {
@@ -721,13 +854,15 @@
     }
    ],
    "source": [
-    "uncut_expvals = [sampled_expectation_value(uncut_counts, obs) for obs in paulis]\n",
+    "uncut_expvals = [\n",
+    "    sampled_expectation_value(uncut_counts, obs) for obs in paulis\n",
+    "]\n",
     "\n",
     "uncut_weight_1 = np.mean(uncut_expvals[:num_qubits])\n",
     "uncut_weight_2 = np.mean(uncut_expvals[num_qubits:])\n",
     "\n",
-    "print(f'Average of weight-1 expectation values is {uncut_weight_1}')\n",
-    "print(f'Average of weight-2 expectation values is {uncut_weight_2}')"
+    "print(f\"Average of weight-1 expectation values is {uncut_weight_1}\")\n",
+    "print(f\"Average of weight-2 expectation values is {uncut_weight_2}\")"
    ]
   },
   {
@@ -766,26 +901,30 @@
    "source": [
     "mpl.rcParams.update(mpl.rcParamsDefault)\n",
     "\n",
-    "fig = plt.subplots(figsize =(12, 8), dpi=200)\n",
+    "fig = plt.subplots(figsize=(12, 8), dpi=200)\n",
     "width = 0.25\n",
-    "labels = ['Weight-1', 'Weight-2']\n",
+    "labels = [\"Weight-1\", \"Weight-2\"]\n",
     "x = np.arange(len(labels))\n",
     "\n",
-    "ideal = [-1,1]\n",
+    "ideal = [-1, 1]\n",
     "cut = [cut_weight_1, cut_weight_2]\n",
     "uncut = [uncut_weight_1, uncut_weight_2]\n",
     "\n",
-    "br1 = np.arange(len(ideal)) \n",
-    "br2 = [x + width for x in br1] \n",
+    "br1 = np.arange(len(ideal))\n",
+    "br2 = [x + width for x in br1]\n",
     "br3 = [x + width for x in br2]\n",
     "\n",
-    "plt.bar(br1, ideal, width=width, edgecolor ='k', label='Ideal', color='#4589ff')\n",
-    "plt.bar(br2, cut, width=width, edgecolor ='k', label='Cut', color='#a56eff')\n",
-    "plt.bar(br3, uncut, width=width, edgecolor ='k', label='Uncut', color='#009d9a')\n",
+    "plt.bar(\n",
+    "    br1, ideal, width=width, edgecolor=\"k\", label=\"Ideal\", color=\"#4589ff\"\n",
+    ")\n",
+    "plt.bar(br2, cut, width=width, edgecolor=\"k\", label=\"Cut\", color=\"#a56eff\")\n",
+    "plt.bar(\n",
+    "    br3, uncut, width=width, edgecolor=\"k\", label=\"Uncut\", color=\"#009d9a\"\n",
+    ")\n",
     "\n",
-    "plt.axhline(y = 0, color = 'k', linestyle = '-')\n",
+    "plt.axhline(y=0, color=\"k\", linestyle=\"-\")\n",
     "\n",
-    "plt.xticks([r + width for r in range(len(ideal))],labels, fontsize=14)\n",
+    "plt.xticks([r + width for r in range(len(ideal))], labels, fontsize=14)\n",
     "plt.yticks(fontsize=14)\n",
     "\n",
     "plt.legend(fontsize=14)\n",
@@ -850,7 +989,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -864,8 +1003,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
-  }
+   "version": "3"
+  },
+  "platform": "cloud"
  },
  "nbformat": 4,
  "nbformat_minor": 5
