--- a/docs/tutorials/sqd-chemistry.ipynb
+++ b/docs/tutorials/sqd-chemistry.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Improving energy estimation of a Fermionic Hamiltonian with SQD\n",
-    "*Usage estimate: under 1 minute on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*\n"
+    "*Usage estimate: under 1 minute on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
@@ -14,7 +14,6 @@
    "id": "9701917b",
    "metadata": {},
    "source": [
-    "\n",
     "## Background\n",
     "\n",
     "In this tutorial, we show how to post-process noisy quantum samples to find an approximation to the ground state of the nitrogen molecule $\\text{N}_2$ at equilibrium bond length, using the [sample-based quantum diagonalization (SQD) algorithm](https://arxiv.org/abs/2405.05068), for samples taken from a 36-qubit quantum circuit (32 system qubits + 4 ancilla qubits). A Qiskit-based implementation is available in the [SQD Qiskit addons](https://github.com/Qiskit/qiskit-addon-sqd), more details can be found in the corresponding [docs](https://docs.quantum.ibm.com/guides/qiskit-addons-sqd) with a [simple example](https://docs.quantum.ibm.com/guides/qiskit-addons-sqd-get-started) to get started.\n",
@@ -45,7 +44,7 @@
     "\\hat{H} = \\sum_{ \\substack{pr\\\\\\sigma} } h_{pr} \\, \\hat{a}^\\dagger_{p\\sigma} \\hat{a}_{r\\sigma}\n",
     "+ \\frac12\n",
     "\\sum_{ \\substack{prqs\\\\\\sigma\\tau} }\n",
-    "h_{prqs} \\, \n",
+    "h_{prqs} \\,\n",
     "\\hat{a}^\\dagger_{p\\sigma}\n",
     "\\hat{a}^\\dagger_{q\\tau}\n",
     "\\hat{a}_{s\\tau}\n",
@@ -175,7 +174,6 @@
     "from qiskit_addon_sqd.counts import counts_to_arrays\n",
     "from qiskit_addon_sqd.configuration_recovery import recover_configurations\n",
     "from qiskit_addon_sqd.fermion import (\n",
-    "    flip_orbital_occupancies,\n",
     "    solve_fermion,\n",
     ")\n",
     "from qiskit_addon_sqd.subsampling import postselect_and_subsample"
@@ -341,7 +339,9 @@
    "outputs": [],
    "source": [
     "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits = 127)"
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=127\n",
+    ")"
    ]
   },
   {
@@ -354,7 +354,7 @@
     "- Select physical qubits (`initial_layout`) from the target hardware that adheres to the zig-zag pattern described above. Laying out qubits in this pattern leads to an efficient hardware-compatible circuit with less gates.\n",
     "- Generate a staged pass manager using the [generate_preset_pass_manager](https://docs.quantum.ibm.com/api/qiskit/transpiler_preset#generate_preset_pass_manager) function from qiskit with your choice of `backend` and `initial_layout`.\n",
     "- Set the `pre_init` stage of your staged pass manager to `ffsim.qiskit.PRE_INIT`. `ffsim.qiskit.PRE_INIT` includes qiskit transpiler passes that decompose gates into orbital rotations and then merges the orbital rotations, resulting in fewer gates in the final circuit.\n",
-    "- Run the pass manager on your circuit. "
+    "- Run the pass manager on your circuit."
    ]
   },
   {
@@ -373,7 +373,24 @@
     }
    ],
    "source": [
-    "spin_a_layout = [0, 14, 18, 19, 20, 33, 39, 40, 41, 53, 60, 61, 62, 72, 81, 82]\n",
+    "spin_a_layout = [\n",
+    "    0,\n",
+    "    14,\n",
+    "    18,\n",
+    "    19,\n",
+    "    20,\n",
+    "    33,\n",
+    "    39,\n",
+    "    40,\n",
+    "    41,\n",
+    "    53,\n",
+    "    60,\n",
+    "    61,\n",
+    "    62,\n",
+    "    72,\n",
+    "    81,\n",
+    "    82,\n",
+    "]\n",
     "spin_b_layout = [2, 3, 4, 15, 22, 23, 24, 34, 43, 44, 45, 54, 64, 65, 66, 73]\n",
     "initial_layout = spin_a_layout + spin_b_layout\n",
     "\n",
@@ -456,7 +473,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Convert counts into bitstring and probability arrays\n",
     "bitstring_matrix_full, probs_arr_full = counts_to_arrays(counts)"
    ]
@@ -621,7 +637,12 @@
     "axs[0].set_yticklabels(yt1)\n",
     "axs[0].set_yscale(\"log\")\n",
     "axs[0].set_ylim(1e-4)\n",
-    "axs[0].axhline(y=chem_accuracy, color=\"#BF5700\", linestyle=\"--\", label=\"chemical accuracy\")\n",
+    "axs[0].axhline(\n",
+    "    y=chem_accuracy,\n",
+    "    color=\"#BF5700\",\n",
+    "    linestyle=\"--\",\n",
+    "    label=\"chemical accuracy\",\n",
+    ")\n",
     "axs[0].set_title(\"Approximated Ground State Energy Error vs SQD Iterations\")\n",
     "axs[0].set_xlabel(\"Iteration Index\", fontdict={\"fontsize\": 12})\n",
     "axs[0].set_ylabel(\"Energy Error (Ha)\", fontdict={\"fontsize\": 12})\n",
@@ -667,7 +688,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -681,8 +702,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
-  }
+   "version": "3"
+  },
+  "platform": "cloud"
  },
  "nbformat": 4,
  "nbformat_minor": 5
