--- a/docs/tutorials/ibm_circuit_function.ipynb
+++ b/docs/tutorials/ibm_circuit_function.ipynb
@@ -464,15 +464,11 @@
    "id": "d1717a9d",
    "metadata": {},
    "source": [
-    "## Tutorial Survey\n",
-    "<table style=\"width: 100%;\">\n",
-    "<tbody>\n",
-    "<tr>\n",
-    "<td style=\"width: 10%;\"><img src=\"https://learning-api.quantum.ibm.com/assets/53171443-b07b-4ae6-a4be-9aec32a854f5\" alt=\"Survey\" width=\"100%\" height=\"100%\"></td>\n",
-    "<td style=\"width: 80%;\"><strong><a title=\"Tutorial Survey\" href=\"https://your.feedback.ibm.com/jfe/form/SV_8jppdGBii6eMmsS\" target=\"_blank\">Tutorial Survey</a></strong><br>Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.</td>\n",
-    "</tr>\n",
-    "</tbody>\n",
-    "</table>"
+    "## Tutorial survey\n",
+    "\n",
+    "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
+    "\n",
+    "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_8jppdGBii6eMmsS)"
    ]
   },
   {
