--- a/docs/tutorials/qunova-hivqe.ipynb
+++ b/docs/tutorials/qunova-hivqe.ipynb
@@ -1091,16 +1091,11 @@
    "id": "a5124358",
    "metadata": {},
    "source": [
-    "## Tutorial Survey\n",
+    "## Tutorial survey\n",
     "\n",
-    "<table style=\"width: 100%;\">\n",
-    "<tbody>\n",
-    "<tr>\n",
-    "<td valign=\"top\" style=\"width: 10%;\"><img src=\"https://learning-api.quantum.ibm.com/assets/53171443-b07b-4ae6-a4be-9aec32a854f5\" alt=\"Survey\" width=\"100%\" height=\"100%\"></td>\n",
-    "<td valign=\"top\"  style=\"width: 80%;\"><strong><a title=\"Tutorial Survey\" href=\"link to tutorial\" target=\"_blank\">Tutorial Survey</a></strong><p><p>Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.</td>\n",
-    "</tr>\n",
-    "</tbody>\n",
-    "</table>"
+    "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
+    "\n",
+    "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_9AizRyKFHEGzVs2)"
    ]
   }
  ],
