Disable some lint rules

--- a/docs/tutorials/krylov-subspace-expansion.ipynb
+++ b/docs/tutorials/krylov-subspace-expansion.ipynb
@@ -10,6 +10,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71d42c57-d1aa-424a-8116-7a3b77bd5fd9",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# This cell is hidden from users – it disables some lint rules\n",
+    "# ruff: noqa: E402 E722 F601"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "921c7b04-5b5d-4cfc-aba0-15a61334e619",
    "metadata": {},
