--- a/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
+++ b/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
@@ -10,6 +10,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2797ee64-644f-40c9-8327-094867333a69",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# This cell is hidden from users – it disables some lint rules\n",
+    "# ruff: noqa: E722"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "500dc8c9-a5d8-4ef1-932f-30e400d6bdde",
    "metadata": {},
