--- a/docs/tutorials/sqd-chemistry.ipynb
+++ b/docs/tutorials/sqd-chemistry.ipynb
@@ -85,7 +85,7 @@
     "\n",
     "As an example, consider a square lattice qubit topology. We can place the $\\alpha$ and $\\beta$ orbitals in parallel lines on the lattice, with connections between these lines forming \"rungs\" of a ladder shape, like this:\n",
     "\n",
-    "![square_lattice_gray_150dpi.png](attachment:baad4e53-5bfd-4cb4-8027-2ec26d27ecdd.png)\n",
+    "![square_lattice_gray_150dpi.png](/images/tutorials/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd/baad4e53-5bfd-4cb4-8027-2ec26d27ecdd.avif)\n",
     "\n",
     "With this setup, orbitals with the same spin are connected with a line topology, while orbitals with different spins are connected when they share the same spatial orbital. This yields the following index constraints on the $\\mathbf{J}$ matrices:\n",
     "\n",
@@ -108,7 +108,7 @@
     "\\end{align*}\n",
     "$$\n",
     "\n",
-    "![lucj_ansatz_zig_zag_pattern.jpg](attachment:7e0ee7e1-2d24-417f-ac59-25c58db79aa9.jpg)\n",
+    "![lucj_ansatz_zig_zag_pattern.jpg](/images/tutorials/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd/7e0ee7e1-2d24-417f-ac59-25c58db79aa9.avif)\n",
     "\n",
     "\n",
     "### Sample-based quantum diagonalization (SQD)\n",
@@ -123,7 +123,7 @@
     "\n",
     "The SQD workflow is depicted in the following diagram:\n",
     "\n",
-    "![sqd_diagram.png](attachment:fd7e816f-4e2e-4dd7-a7da-f71afb9ca68d.png)\n",
+    "![sqd_diagram.png](/images/tutorials/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd/fd7e816f-4e2e-4dd7-a7da-f71afb9ca68d.avif)\n",
     "\n",
     "SQD is known to work well when the target eigenstate is sparse: the wave function is supported in a set of basis states $\\mathcal{S} = \\{|x\\rangle \\}$ whose size does not increase exponentially with the size of the problem."
    ]
