--- a/docs/tutorials/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd.ipynb
+++ b/docs/tutorials/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd.ipynb
@@ -280,7 +280,7 @@
    "id": "f4d882fa",
    "metadata": {},
    "source": [
-    "Now, we use [ffsim](https://github.com/qiskit-community/ffsim) to create the ansatz circuit. Since our molecule has a closed-shell Hartree-Fock state, we use the spin-balanced variant of the UCJ ansatz, [UCJOpSpinBalanced](https://qiskit-community.github.io/ffsim/api/ffsim.html#ffsim.UCJOpSpinBalanced). We pass interaction pairs appropriate for a heavy-hex lattice qubit topology (see the [background section on the LUCJ ansatz](#The-local-UCJ-(LUCJ)-ansatz))."
+    "Now, we use [ffsim](https://github.com/qiskit-community/ffsim) to create the ansatz circuit. Since our molecule has a closed-shell Hartree-Fock state, we use the spin-balanced variant of the UCJ ansatz, [UCJOpSpinBalanced](https://qiskit-community.github.io/ffsim/api/ffsim.html#ffsim.UCJOpSpinBalanced). We pass interaction pairs appropriate for a heavy-hex lattice qubit topology (see the [background section on the LUCJ ansatz](#local-unitary-cluster-jastrow-lucj-ansatz))."
    ]
   },
   {
