--- a/docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci.ipynb
+++ b/docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci.ipynb
@@ -5,6 +5,8 @@
    "id": "b6d1e3ec",
    "metadata": {},
    "source": [
+    "{/* cspell:ignore QSCI qsci CISD cisd CCSD ccsd markersize */}\n",
+    "\n",
     "# Compute dissociation curves for strong coupling systems with QunaSys QSCI"
    ]
   },
@@ -27,7 +29,7 @@
    "source": [
     "## Background\n",
     "\n",
-    "Finding the ground state energy of molecules is a common step in material science, drug discovery and various other fields. Solving the ground state energy for strong coupling system in the dissociation process is particularly known to be difficult with classical methods such as Hartree-Fock (HF), CISD and CCSD. While FCI produces the exact ground state of the given Hamiltonain, diagonalizing the Hamiltonian using the full subspace basis vectors and is usually computationally costly. In this tutorial, you will learn how to use QURI Chemistry to produce the dissociation curve of $N_2$."
+    "Finding the ground state energy of molecules is a common step in material science, drug discovery and various other fields. Solving the ground state energy for strong coupling system in the dissociation process is particularly known to be difficult with classical methods such as Hartree-Fock (HF), CISD and CCSD. While FCI produces the exact ground state of the given Hamiltonian, diagonalizing the Hamiltonian using the full subspace basis vectors and is usually computationally costly. In this tutorial, you will learn how to use QURI Chemistry to produce the dissociation curve of $N_2$."
    ]
   },
   {
@@ -168,7 +170,7 @@
    "id": "2e61258f",
    "metadata": {},
    "source": [
-    "To improve the performance, it is recommended to turn on configuration recovery. For 20 qubit system with $R = 7200$, using the default confiugration recovery setting is sufficient."
+    "To improve the performance, it is recommended to turn on configuration recovery. For 20 qubit system with $R = 7200$, using the default configuration recovery setting is sufficient."
    ]
   },
   {
