--- a/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver.ipynb
+++ b/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver.ipynb
@@ -5,6 +5,8 @@
    "id": "b6d1e3ec",
    "metadata": {},
    "source": [
+    "{/* cspell:ignore lambdify ILOG histtype stepfilled */}\n",
+    "\n",
     "# Solve higher-order binary optimization problems with Q-CTRL's Optimization Solver"
    ]
   },
@@ -709,7 +711,7 @@
    "outputs": [],
    "source": [
     "def plot_cost_histogram(\n",
-    "    costs, probs, distribution, qubit_count, bitstring_cost\n",
+    "    costs, probabilities, distribution, qubit_count, bitstring_cost\n",
     "):\n",
     "    \"\"\"Plots a histogram comparing the cost distributions of Q-CTRL Solver and random sampling.\"\"\"\n",
     "\n",
@@ -735,7 +737,7 @@
     "    random_costs = [bitstring_cost(k) for k in random_bitstrings]\n",
     "\n",
     "    # Set uniform probabilities for the random sampling\n",
-    "    random_probs = (\n",
+    "    random_probabilities = (\n",
     "        np.ones(shape=(shots,)) / shots\n",
     "    )  # Equal probability for each random bitstring\n",
     "\n",
@@ -750,7 +752,10 @@
     "    _, _, _ = ax.hist(\n",
     "        [costs, random_costs],  # Data for the two histograms\n",
     "        np.arange(min_cost, max_cost, 2),  # Bins for the histogram\n",
-    "        weights=[probs, random_probs],  # Probabilities for each data set\n",
+    "        weights=[\n",
+    "            probabilities,\n",
+    "            random_probabilities,\n",
+    "        ],  # Probabilities for each data set\n",
     "        label=labels,  # Labels for the legend\n",
     "        color=colors,  # Colors for each histogram\n",
     "        histtype=\"stepfilled\",  # Filled step histogram\n",
@@ -803,10 +808,14 @@
     "costs = [bitstring_cost(k) for k, _ in distribution.items()]\n",
     "\n",
     "# Extract probabilities from the bitstring distribution\n",
-    "probs = np.array([v for _, v in distribution.items()])\n",
-    "probs = probs / sum(probs)  # Normalize to get probabilities\n",
+    "probabilities = np.array([v for _, v in distribution.items()])\n",
+    "probabilities = probabilities / sum(\n",
+    "    probabilities\n",
+    ")  # Normalize to get probabilities\n",
     "\n",
-    "plot_cost_histogram(costs, probs, distribution, qubit_count, bitstring_cost)"
+    "plot_cost_histogram(\n",
+    "    costs, probabilities, distribution, qubit_count, bitstring_cost\n",
+    ")"
    ]
   },
   {
