--- a/docs/tutorials/scaling-periodic-boundary-problems-with-circuit-cutting.ipynb
+++ b/docs/tutorials/scaling-periodic-boundary-problems-with-circuit-cutting.ipynb
@@ -5,6 +5,8 @@
    "id": "eb16d89d-f6fc-417f-9ce5-19251d039df7",
    "metadata": {},
    "source": [
+    "{/* cspell:ignore edgecolor */}",
+    "\n",
     "# Scaling Periodic Boundary Problems with Circuit Cutting\n",
     "*Usage estimate: 2 minutes on IBM Brisbane (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
@@ -16,11 +18,11 @@
    "source": [
     "## Background\n",
     "\n",
-    "In this notebook, we consider the simulation of a periodic chain of qubits where there is two qubit operation between every two adjancent qubits, including the first and the last ones. Periodic chains are often found in physics and chemistry problems such as Ising models, molecular simulation, etc.\n",
+    "In this notebook, we consider the simulation of a periodic chain of qubits where there is two qubit operation between every two adjacent qubits, including the first and the last ones. Periodic chains are often found in physics and chemistry problems such as Ising models, molecular simulation, etc.\n",
     "\n",
-    "Current IBM Quantum devices are planar. It is possible to embed some periodic chains on the topology directly where the first and last qubits are neighbours. However, for big enough problems, the first and last qubits can be far apart, thus requiring many SWAP gates for the 2-qubit operation between these two qubits. Such a periodic boundary problem has been studied in <a href=\"https://arxiv.org/abs/2402.17833\">this paper</a>.\n",
+    "Current IBM Quantum devices are planar. It is possible to embed some periodic chains on the topology directly where the first and last qubits are neighbors. However, for big enough problems, the first and last qubits can be far apart, thus requiring many SWAP gates for the 2-qubit operation between these two qubits. Such a periodic boundary problem has been studied in <a href=\"https://arxiv.org/abs/2402.17833\">this paper</a>.\n",
     "\n",
-    "In this notebook we show the usage of circuit cutting to deal with such a utility scale periodic chain problem where the first and last qubits are not neighbours. Cutting this long range connectivity avoids the extra SWAP gates at the cost of executing multiple instances of the circuit, and some classical postprocessing. In summary, cutting can be incorporated to logically calculate the long distance 2-qubit operations. In other words, this approach leads to an effective increase in the connectivity of the coupling map, thus leading to a fewer number of SWAP gates.\n",
+    "In this notebook we show the usage of circuit cutting to deal with such a utility scale periodic chain problem where the first and last qubits are not neighbors. Cutting this long range connectivity avoids the extra SWAP gates at the cost of executing multiple instances of the circuit, and some classical postprocessing. In summary, cutting can be incorporated to logically calculate the long distance 2-qubit operations. In other words, this approach leads to an effective increase in the connectivity of the coupling map, thus leading to a fewer number of SWAP gates.\n",
     "\n",
     "Note that there are two types of cuts - cutting the wire of a circuit (called `wire cutting`), or replacing a 2-qubit gate with multiple single qubit operations (called `gate cutting`). In this notebook, we shall focus on gate cutting. For more details on gate cutting, refer to the <a href=\"https://qiskit.github.io/qiskit-addon-cutting/explanation/index.html\">explanatory materials</a> in `qiskit-addon-cutting`, and the corresponding references. For more details on wire cutting, refer to <a href=\"https://learning.quantum.ibm.com/tutorial/wire-cutting-to-improve-performance\">this notebook</a>, or the tutorials in <a href='https://qiskit.github.io/qiskit-addon-cutting/tutorials/index.html'>qiskit-addon-cutting</a>."
    ]
@@ -132,7 +134,7 @@
    "id": "15b9c4e5-7b25-4b95-9d79-bf73b9adad97",
    "metadata": {},
    "source": [
-    "For this notebook we shall consider a 109 qubit periodic 1D chain, which is the longest 1D chain in the topology of a 127 qubit IBM Quantum device. It is not possible to arrange a 109 qubit periodic chain on a 127 qubit device such that the first and last qubits are neighbours without incorporating extra SWAP gates."
+    "For this notebook we shall consider a 109 qubit periodic 1D chain, which is the longest 1D chain in the topology of a 127 qubit IBM Quantum device. It is not possible to arrange a 109 qubit periodic chain on a 127 qubit device such that the first and last qubits are neighbors without incorporating extra SWAP gates."
    ]
   },
   {
@@ -983,7 +985,7 @@
   }
  ],
  "metadata": {
-  "description": "Use circuit cutting to deal with a utility-scale periodic chain problem where the first and last qubits are not neighbours.",
+  "description": "Use circuit cutting to deal with a utility-scale periodic chain problem where the first and last qubits are not neighbors.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
