Add missing pages to tools section

--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -17,6 +17,10 @@ Simple text to explain this tools-based schema
 
 * [Grover's algorithm](/tutorials/grovers-algorithm)
 
+* [CHSH Inequality](/tutorials/chsh-inequality)
+
+* [Diagonalization of large many-body Hamiltonians on a quantum processor](/tutorials/krylov-subspace-expansion)
+
 </details>
 
 <details>
