Add a description of the dedicated service

--- a/docs/guides/plans-overview.mdx
+++ b/docs/guides/plans-overview.mdx
@@ -31,8 +31,13 @@ This plan is recommended for those who are performing quantum utility research p
 
 Run quantum circuits on the world's best QPUs using an enterprise quantum time subscription. Additionally, some functionality, such as [Qiskit Functions](functions) and [Qiskit Transpiler as a Service](qiskit-transpiler-service),  is available only to Premium Plan users.
 
-This plan is recommended for those who want to execute a strategic quantum roadmap and develop quantum algorithms and applications at scale.
+This plan is recommended for those who want to execute a strategic quantum roadmap and develop quantum algorithms and applications at scale. [Contact IBM](https://www.ibm.com/account/reg/us-en/signup?formid=MAIL-quantum) to learn more.
 
+## Dedicated Service
+
+Access to an entirely dedicated quantum system that is serviced and maintained by IBM Quantum.
+
+This service is recommended for those who are exploring classical quantum algorithms and applications and need high control over their resources and data. [Contact IBM](https://www.ibm.com/account/reg/us-en/signup?formid=MAIL-quantum) to learn more.
 
 ## Next steps
 
