--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -191,8 +191,8 @@
     ")\n",
     "\n",
     "time_estimation_job = qesem_function.run(\n",
-    "    pubs = [(circ, [avg_magnetization, other_observable])],\n",
-    "    options =  {\n",
+    "    pubs=[(circ, [avg_magnetization, other_observable])],\n",
+    "    options={\n",
     "        \"estimate_time_only\": \"analytical\",\n",
     "    },\n",
     "    instance=instance,\n",
@@ -392,9 +392,11 @@
    "source": [
     "result = sample_job.result()\n",
     "print(f\"The result of the submitted job had {len(result)} PUB\")\n",
-    "print(f\"The expectation values measured from this PUB are: \\n{result[0].data.evs}\")\n",
+    "print(\n",
+    "    f\"The expectation values measured from this PUB are: \\n{result[0].data.evs}\"\n",
+    ")\n",
     "print(f\"The error-bar values are: \\n{result[0].data.stds}\")\n",
-    "noisy_results = result[0].metadata['noisy_results']\n",
+    "noisy_results = result[0].metadata[\"noisy_results\"]\n",
     "print(f\"Noisy expectation values: \\n{noisy_results.evs}\")\n",
     "print(f\"Noisy error-bar: \\n{noisy_results.stds}\")"
    ]
@@ -482,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3"
   },
   "title": "QESEM - A Qiskit Function by Qedma"
  },
