--- a/docs/tutorials/heisenberg-chain.ipynb
+++ b/docs/tutorials/heisenberg-chain.ipynb
@@ -336,7 +336,7 @@
    "source": [
     "## Deploy the Qiskit Pattern to the cloud\n",
     "\n",
-    "To do this, move the source code above to a file, `./source/heisenberg.py`, wrap the code in a script which takes inputs and returns the final solution, and finally upload it to a remote cluster using the `QiskitPattern` class from `Qiskit Serverless`. For guidance on specifying external dependencies, passing input arguments, and more, check out the [Qiskit Serverless guides](https://qiskit.github.io/qiskit-serverless/getting_started/index.html).\n",
+    "To do this, move the source code above to a file, `./source/heisenberg.py`, wrap the code in a script which takes inputs and returns the final solution, and finally upload it to a remote cluster using the `QiskitFunction` class from `qiskit-ibm-catalog`. For guidance on specifying external dependencies, passing input arguments, and more, check out the [Qiskit Serverless guides](https://quantum.cloud.ibm.com/docs/en/guides/serverless).\n",
     "\n",
     "The input to the Pattern is the number of spins in the chain. The output is an estimation of the ground state energy of the system."
    ]
@@ -349,9 +349,9 @@
    "outputs": [],
    "source": [
     "# Authenticate to the remote cluster and submit the pattern for remote execution\n",
-    "serverless = IBMServerlessProvider()\n",
-    "heisenberg_pattern = QiskitPattern(\n",
-    "    title=\"ibm/heisenberg\",\n",
+    "serverless = QiskitServerless()\n",
+    "heisenberg_function = QiskitFunction(\n",
+    "    title=\"ibm_heisenberg\",\n",
     "    entrypoint=\"heisenberg.py\",\n",
     "    working_dir=\"./source/\",\n",
     ")\n",
@@ -365,7 +365,7 @@
    "source": [
     "### Run the Qiskit Pattern as a managed service\n",
     "\n",
-    "Once we have uploaded the pattern to the cloud, we can easily run it using the `IBMServerlessProvider` client."
+    "Once we have uploaded the pattern to the cloud, we can easily run it using the `QiskitServerless` client."
    ]
   },
   {
@@ -377,7 +377,8 @@
    "source": [
     "# Run the pattern on the remote cluster\n",
     "\n",
-    "job = serverless.run(\"ibm/heisenberg\")\n",
+    "ibm_heisenberg = serverless.load(\"ibm_heisenberg\")\n",
+    "job = serverless.run(ibm_heisenberg)\n",
     "solution = job.result()\n",
     "\n",
     "print(solution)\n",
