Add link to marketing page

--- a/docs/guides/plans-overview.mdx
+++ b/docs/guides/plans-overview.mdx
@@ -42,6 +42,7 @@ This service is recommended for those who are exploring classical quantum algori
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
+  -  [Compare available plans.](https://www.ibm.com/quantum/pricing)
   -  Understand what counts as [usage.](estimate-job-run-time)
   -  Learn about the [fair-share scheduler](fair-share-scheduler)
   -  Access plans by creating [instances.](instances)
