--- a/docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb
+++ b/docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb
@@ -668,9 +668,13 @@
     }
    ],
    "source": [
-    "print(f\"Expectation value without backpropagation: {result_no_bp} ± {std_no_bp}\")\n",
+    "print(\n",
+    "    f\"Expectation value without backpropagation: {result_no_bp} ± {std_no_bp}\"\n",
+    ")\n",
     "print(f\"Backpropagated expectation value: {result_bp} ± {std_bp}\")\n",
-    "print(f\"Backpropagated expectation value with truncation: {result_bp_trunc} ± {std_bp_trunc}\")"
+    "print(\n",
+    "    f\"Backpropagated expectation value with truncation: {result_bp_trunc} ± {std_bp_trunc}\"\n",
+    ")"
    ]
   },
   {
@@ -1318,7 +1322,7 @@
  "metadata": {
   "description": "In this tutorial we will implement a Qiskit pattern for simulating the quantum dynamics of a Heisenberg spin chain using qiskit-addon-obp",
   "kernelspec": {
-   "display_name": "qiskit-docs-test",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1332,7 +1336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "platform": "cloud",
   "title": "Improving estimation of expectation values with Operator Backpropagation (OBP)"
