--- a/docs/tutorials/quantum-kernel-training.ipynb
+++ b/docs/tutorials/quantum-kernel-training.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, Sampler\n",
     "\n",
-    "#from qiskit_serverless import IBMServerlessClient, QiskitFunction\n",
+    "# from qiskit_serverless import IBMServerlessClient, QiskitFunction\n",
     "from qiskit_ibm_catalog import QiskitServerless, QiskitFunction\n",
     "\n",
     "\n",
@@ -362,8 +362,7 @@
    "source": [
     "generate_kernel_entry = serverless.load(\"generate-kernel-entry\")\n",
     "job = generate_kernel_entry.run(\n",
-    "    sample1 = list(X_train[x]),\n",
-    "    sample2 = list(X_train[x2])\n",
+    "    sample1=list(X_train[x1]), sample2=list(X_train[x2])\n",
     ")\n",
     "\n",
     "kernel_matrix[x1, x2] = job.result()[\"fidelity\"]\n",
@@ -394,7 +393,7 @@
  "metadata": {
   "description": "Build a Qiskit Pattern for evaluating entries into a quantum kernel matrix used for binary classification.",
   "kernelspec": {
-   "display_name": "qiskit-docs-test",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -408,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "platform": "cloud",
   "title": "Quantum kernel training"
