--- a/docs/tutorials/quantum-approximate-optimization-algorithm.ipynb
+++ b/docs/tutorials/quantum-approximate-optimization-algorithm.ipynb
@@ -1405,7 +1405,7 @@
  "metadata": {
   "description": "Learn the basics of quantum computing, and how to use IBM Quantum services and systems to solve real-world problems.",
   "kernelspec": {
-   "display_name": "qiskit-docs-test",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1419,7 +1419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "platform": "cloud",
   "title": "Solve utility-scale quantum optimization problems"
