--- a/docs/tutorials/reduce-transpiled-circuit-depth-with-circuit-cutting.ipynb
+++ b/docs/tutorials/reduce-transpiled-circuit-depth-with-circuit-cutting.ipynb
@@ -454,7 +454,7 @@
  "metadata": {
   "description": "Build a Qiskit Pattern for cutting gates in a quantum circuit to reduce circuit depth.",
   "kernelspec": {
-   "display_name": "qiskit-docs-test",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -468,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "platform": "cloud",
   "title": "Reduce transpiled circuit depth with circuit cutting"
