--- a/docs/tutorials/solving-maxcut-with-reduced-qubit-requirements-using-pauli-correlation-encoding.ipynb
+++ b/docs/tutorials/solving-maxcut-with-reduced-qubit-requirements-using-pauli-correlation-encoding.ipynb
@@ -725,7 +725,7 @@
  "metadata": {
   "description": "Use Pauli Correlation Encoding to encode optimization problems into qubits with greater efficiency for quantum computation.",
   "kernelspec": {
-   "display_name": "qiskit-docs-test",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -739,7 +739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "platform": "cloud",
   "title": "Solving Maxcut with Reduced Qubit Requirements Using Pauli Correlation Encoding"
