--- a/docs/tutorials/transpilation-optimizations-with-sabre.ipynb
+++ b/docs/tutorials/transpilation-optimizations-with-sabre.ipynb
@@ -1347,7 +1347,7 @@
  "metadata": {
   "description": "SABRE is an optimization tool for layout and routing. It is especially effective with large-scale circuits and complex coupling maps,",
   "kernelspec": {
-   "display_name": "qiskit-docs-test",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1361,7 +1361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "platform": "cloud",
   "title": "Transpilation Optimizations with SABRE"
