--- a/docs/tutorials/utility-scale-error-mitigation-with-probabilistic-error-amplification.ipynb
+++ b/docs/tutorials/utility-scale-error-mitigation-with-probabilistic-error-amplification.ipynb
@@ -810,7 +810,7 @@
     "            \"num_randomizations\": num_randomizations_learning,\n",
     "        },\n",
     "        \"zne\": {\n",
-    "            \"amplifier\": 'pea',\n",
+    "            \"amplifier\": \"pea\",\n",
     "            \"noise_factors\": noise_factors,\n",
     "            \"extrapolator\": (\"exponential\", \"linear\"),\n",
     "            \"extrapolated_noise_factors\": extrapolated_noise_factors.tolist(),\n",
@@ -1452,7 +1452,7 @@
  "metadata": {
   "description": "Run a utility-scale error mitigation experiment with zero noise extrapolation and probabilistic error amplification.",
   "kernelspec": {
-   "display_name": "qiskit-docs-test",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1466,7 +1466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "platform": "cloud",
   "title": "Utility-scale error mitigation with probabilistic error amplification"
