Clean up imports

--- a/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
+++ b/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
@@ -62,51 +62,31 @@
    },
    "outputs": [],
    "source": [
+    "import random\n",
     "from typing import List, Dict, Union, Optional, Callable\n",
     "\n",
-    "import random\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "from IPython.display import clear_output\n",
     "\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
-    "# Importing standard Qiskit libraries\n",
-    "from qiskit import (\n",
-    "    QuantumCircuit,\n",
-    "    QuantumRegister,\n",
-    "    ClassicalRegister,\n",
-    ")\n",
-    "from qiskit.primitives import BitArray\n",
-    "\n",
-    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "\n",
+    "from qiskit import QuantumCircuit, QuantumRegister, ClassicalRegister\n",
     "from qiskit.circuit import Gate\n",
+    "from qiskit.circuit.classical import expr\n",
     "from qiskit.circuit.library import XGate\n",
-    "\n",
+    "from qiskit.primitives import BitArray\n",
     "from qiskit.providers.backend import BackendV2 as Backend\n",
+    "from qiskit.quantum_info import Pauli, PauliList\n",
+    "from qiskit.result import marginal_counts\n",
     "from qiskit.transpiler import CouplingMap, InstructionDurations\n",
     "from qiskit.transpiler.passmanager import PassManager\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
-    "from qiskit_ibm_provider.transpiler.passes.scheduling import (\n",
-    "    DynamicCircuitInstructionDurations,\n",
-    ")\n",
-    "from qiskit_ibm_provider.transpiler.passes.scheduling import (\n",
-    "    ALAPScheduleAnalysis,\n",
-    ")\n",
-    "from qiskit_ibm_provider.transpiler.passes.scheduling import (\n",
-    "    PadDynamicalDecoupling,\n",
-    ")\n",
     "from qiskit_ibm_runtime import Batch, SamplerV2 as Sampler\n",
-    "\n",
-    "from qiskit.circuit.classical import expr\n",
-    "\n",
-    "from qiskit.quantum_info import Pauli, PauliList\n",
-    "from qiskit.result import marginal_counts\n",
-    "\n",
-    "import warnings\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
+    "from qiskit_ibm_runtime.transpiler.passes.scheduling import (\n",
+    "    DynamicCircuitInstructionDurations,\n",
+    "    ALAPScheduleAnalysis,\n",
+    "    PadDynamicalDecoupling,\n",
+    ")"
    ]
   },
   {
