--- a/docs/tutorials/advanced-techniques-for-qaoa.ipynb
+++ b/docs/tutorials/advanced-techniques-for-qaoa.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "- **SWAP strategy with SAT initial mapping**: This is a specifically designed transpiler pass for QAOA that uses a SWAP strategy and a SAT solver together to improve the selection of which physical qubits on the QPU to use. The SWAP strategy exploits the commutativity of the QAOA operators to reorder gates so that layers of SWAP gates can be simultaneously executed, thus reducing the depth of the circuit [\\[1\\]](#references). The SAT solver is used to find an initial mapping that minimizes the number of SWAP operations needed to map the qubits in the circuit to the physical qubits on the device [\\[2\\]](#references) .\n",
     "- **CVaR cost function**: Typically the expected value of the cost Hamiltonian is used as the cost function for QAOA, but as was shown in [\\[3\\]](#references) , focusing on the tail of the distribution, rather than the expected value, can improve the performance of QAOA for combinatorial optimization problems. The CVaR accomplishes this. For a given set of shots with corresponding objective values of the considered optimization problem, the Conditional Value at Risk (CVaR) with confidence level $\\alpha \\in [0, 1]$ is defined as the average of the $\\alpha$ best shots [\\[3\\]](#references).\n",
-    "Thus, $\\alpha = 1$ corresponds to the standard expected value, while $\\alpha=0$ corresponds to the minimum of the given shots, and $\\alpha \\in (0, 1)$ is a tradeoff between focusing on better shots, but still applying some averaging to smoothen the optimization landscape. Additionally, the CVaR can be used as error mitigation technique to improve the quality of the objective value estimation [\\[4\\]](#references)."
+    "Thus, $\\alpha = 1$ corresponds to the standard expected value, while $\\alpha=0$ corresponds to the minimum of the given shots, and $\\alpha \\in (0, 1)$ is a tradeoff between focusing on better shots, while still applying some averaging to smoothen the optimization landscape. Additionally, the CVaR can be used as an error mitigation technique to improve the quality of the objective value estimation [\\[4\\]](#references)."
    ]
   },
   {
@@ -47,7 +47,7 @@
     "\n",
     "Before starting this tutorial, be sure you have the following installed:\n",
     "- Qiskit SDK v1.0 or later, with visualization support ( `pip install 'qiskit[visualization]'` )\n",
-    "- Qiskit Runtime 0.22 or later (`pip install qiskit-ibm-runtime`)\n",
+    "- Qiskit Runtime v0.22 or later (`pip install qiskit-ibm-runtime`)\n",
     "- Rustworkx graph library (`pip install rustworkx`)\n",
     "- Python SAT (`pip install python-sat`)"
    ]
@@ -107,12 +107,12 @@
     "### Max-Cut Problem\n",
     "Let's consider solving the **Max-Cut** problem on a graph with 100 nodes using QAOA.\n",
     "The Max-Cut problem is a combinatorial optimization problem that is defined on a graph $G = (V, E)$, where $V$ is the set of vertices and $E$ is the set of edges. The goal is to partition the vertices into two sets, $S$ and $V \\setminus S$, such that the number of edges between the two sets is maximized.\n",
-    "In this example, we will use a graph with 100 nodes that is based on a hardware coupling map.\n",
+    "In this example, we use a graph with 100 nodes that is based on a hardware coupling map.\n",
     "\n",
     "\n",
     "### Graph -> Hamiltonian\n",
     "\n",
-    "First, convert the graph into a Hamiltonian that is suited for the QAOA. Details on this process can be found in the introductory QAOA tutorial, linked above."
+    "First, convert the graph into a Hamiltonian that is suited for the QAOA. Details on this process can be found in the [introductory QAOA tutorial.](/tutorials/quantum-approximate-optimization-algorithm)"
    ]
   },
   {
