--- a/docs/tutorials/advanced-techniques-for-qaoa.ipynb
+++ b/docs/tutorials/advanced-techniques-for-qaoa.ipynb
@@ -110,7 +110,7 @@
     "In this example, we use a graph with 100 nodes that is based on a hardware coupling map.\n",
     "\n",
     "\n",
-    "### Graph -> Hamiltonian\n",
+    "### Graph &rarr; Hamiltonian\n",
     "\n",
     "First, convert the graph into a Hamiltonian that is suited for the QAOA. Details on this process can be found in the [introductory QAOA tutorial.](/tutorials/quantum-approximate-optimization-algorithm)"
    ]
@@ -324,9 +324,11 @@
     "class SATResult:\n",
     "    \"\"\"A data class to hold the result of a SAT solver.\"\"\"\n",
     "\n",
-    "    satisfiable: bool  # Satisfiable is True if the SAT model could be solved in a given time.\n",
+    "    satisfiable: bool  # Satisfiable is True if the SAT model could be solved\n",
+    "    # in a given time.\n",
     "    solution: dict  # The solution to the SAT problem if it is satisfiable.\n",
-    "    mapping: list  # The mapping of nodes in the pattern graph to nodes in the target graph.\n",
+    "    mapping: list  # The mapping of nodes in the pattern graph to nodes in the\n",
+    "    # target graph.\n",
     "    elapsed_time: float  # The time it took to solve the SAT model.\n",
     "\n",
     "\n",
@@ -335,16 +337,18 @@
     "    the initial mapping problem in SWAP gate insertion for commuting gates.\n",
     "\n",
     "    When this pass is run on a DAG it will look for the first instance of\n",
-    "    :class:`.Commuting2qBlock` and use the program graph :math:`P` of this block of gates to\n",
-    "    find a layout for a given swap strategy. This layout is found with a\n",
-    "    binary search over the layers :math:`l` of the swap strategy. At each considered layer\n",
-    "    a subgraph isomorphism problem formulated as a SAT is solved by a SAT solver. Each instance\n",
-    "    is whether it is possible to embed the program graph :math:`P` into the effective\n",
-    "    connectivity graph :math:`C_l` that is achieved by applying :math:`l` layers of the\n",
-    "    swap strategy to the coupling map :math:`C_0` of the backend. Since solving SAT problems\n",
-    "    can be hard, a ``time_out`` fixes the maximum time allotted to the SAT solver for each\n",
-    "    instance. If this time is exceeded the considered problem is deemed unsatisfiable and\n",
-    "    the binary search proceeds to the next number of swap layers :math:``l``.\n",
+    "    :class:`.Commuting2qBlock` and use the program graph :math:`P` of this block\n",
+    "    of gates to find a layout for a given swap strategy. This layout is found\n",
+    "    with a binary search over the layers :math:`l` of the swap strategy. At each\n",
+    "    considered layer a subgraph isomorphism problem formulated as a SAT is solved\n",
+    "    by a SAT solver. Each instance is whether it is possible to embed the program\n",
+    "    graph :math:`P` into the effective connectivity graph :math:`C_l` that is\n",
+    "    achieved by applying :math:`l` layers of the swap strategy to the coupling map\n",
+    "    :math:`C_0` of the backend. Since solving SAT problems can be hard, a\n",
+    "    ``time_out`` fixes the maximum time allotted to the SAT solver for each\n",
+    "    instance. If this time is exceeded the considered problem is deemed\n",
+    "    unsatisfiable and the binary search proceeds to the next number of swap\n",
+    "    layers :math:``l``.\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, timeout: int = 60):\n",
