--- a/docs/tutorials/advanced-techniques-for-qaoa.ipynb
+++ b/docs/tutorials/advanced-techniques-for-qaoa.ipynb
@@ -355,8 +355,8 @@
     "        \"\"\"Initialize the SATMapping.\n",
     "\n",
     "        Args:\n",
-    "            timeout: The allowed time in seconds for each iteration of the SAT solver. This\n",
-    "                variable defaults to 60 seconds.\n",
+    "            timeout: The allowed time in seconds for each iteration of the SAT\n",
+    "                solver. This variable defaults to 60 seconds.\n",
     "        \"\"\"\n",
     "        self.timeout = timeout\n",
     "\n",
@@ -367,29 +367,34 @@
     "        min_layers: int | None = None,\n",
     "        max_layers: int | None = None,\n",
     "    ) -> dict[int, SATResult]:\n",
-    "        r\"\"\"Find an initial mapping for a given swap strategy. Perform a binary search\n",
-    "        over the number of swap layers, and for each number of swap layers solve a\n",
-    "        subgraph isomorphism problem formulated as a SAT problem.\n",
+    "        r\"\"\"Find an initial mapping for a given swap strategy. Perform a\n",
+    "        binary search over the number of swap layers, and for each number\n",
+    "        of swap layers solve a subgraph isomorphism problem formulated as\n",
+    "        a SAT problem.\n",
     "\n",
     "        Args:\n",
     "            program_graph (rx.Graph): The program graph with commuting gates, where\n",
     "                                        each edge represents a two-qubit gate.\n",
-    "            swap_strategy (SwapStrategy): The swap strategy to use to find the initial mapping.\n",
-    "            min_layers (int): The minimum number of swap layers to consider. Defaults to\n",
-    "            the maximum degree of the program graph - 2.\n",
-    "            max_layers (int): The maximum number of swap layers to consider. Defaults to\n",
-    "            the number of qubits in the swap strategy - 2.\n",
+    "            swap_strategy (SwapStrategy): The swap strategy to use to find the\n",
+    "                                        initial mapping.\n",
+    "            min_layers (int): The minimum number of swap layers to consider.\n",
+    "                                        Defaults to the maximum degree of the\n",
+    "                                        program graph - 2.\n",
+    "            max_layers (int): The maximum number of swap layers to consider.\n",
+    "                                        Defaults to the number of qubits in the\n",
+    "                                        swap strategy - 2.\n",
     "\n",
     "        Returns:\n",
-    "            dict[int, SATResult]: A dictionary containing the results of the SAT solver for\n",
-    "                                    each number of swap layers.\n",
+    "            dict[int, SATResult]: A dictionary containing the results of the SAT\n",
+    "                                    solver for each number of swap layers.\n",
     "        \"\"\"\n",
     "        num_nodes_g1 = len(program_graph.nodes())\n",
     "        num_nodes_g2 = swap_strategy.distance_matrix.shape[0]\n",
     "        if num_nodes_g1 > num_nodes_g2:\n",
     "            return SATResult(False, [], [], 0)\n",
     "        if min_layers is None:\n",
-    "            # use the maximum degree of the program graph - 2 as the lower bound.\n",
+    "            # use the maximum degree of the program graph - 2\n",
+    "            # as the lower bound.\n",
     "            min_layers = max((d for _, d in program_graph.degree)) - 2\n",
     "        if max_layers is None:\n",
     "            max_layers = num_nodes_g2 - 1\n",
@@ -406,10 +411,12 @@
     "        binary_search_results = {}\n",
     "\n",
     "        def interrupt(solver):\n",
-    "            # This function is called to interrupt the solver when the timeout is reached.\n",
+    "            # This function is called to interrupt the solver when the\n",
+    "            # timeout is reached.\n",
     "            solver.interrupt()\n",
     "\n",
-    "        # Make a cnf (conjunctive normal form) for the one-to-one mapping constraint\n",
+    "        # Make a cnf (conjunctive normal form) for the one-to-one\n",
+    "        # mapping constraint\n",
     "        cnf1 = []\n",
     "        for i in range(num_nodes_g1):\n",
     "            clause = variables[i, :].tolist()\n",
@@ -421,14 +428,15 @@
     "            for k, m in combinations(clause, 2):\n",
     "                cnf1.append([-1 * k, -1 * m])\n",
     "\n",
-    "        # Perform a binary search over the number of swap layers to find the minimum\n",
-    "        # number of swap layers that satisfies the subgraph isomorphism problem.\n",
+    "        # Perform a binary search over the number of swap layers to find the\n",
+    "        # minimum number of swap layers that satisfies the subgraph isomorphism\n",
+    "        # problem.\n",
     "        while min_layers < max_layers:\n",
     "            num_layers = (min_layers + max_layers) // 2\n",
     "\n",
-    "            # Create the connectivity matrix. Note that if the swap strategy cannot reach\n",
-    "            # full connectivity then its distance matrix will have entries with -1. These\n",
-    "            # entries must be treated as False.\n",
+    "            # Create the connectivity matrix. Note that if the swap strategy\n",
+    "            # cannot reach full connectivity then its distance matrix will have\n",
+    "            # entries with -1. These entries must be treated as False.\n",
     "            d_matrix = swap_strategy.distance_matrix\n",
     "            connectivity_matrix = (\n",
     "                (-1 < d_matrix) & (d_matrix <= num_layers)\n",
@@ -453,7 +461,8 @@
     "\n",
     "            with Solver(bootstrap_with=cnf, use_timer=True) as solver:\n",
     "                # Solve the SAT problem with a timeout.\n",
-    "                # Timer is used to interrupt the solver when the timeout is reached.\n",
+    "                # Timer is used to interrupt the solver when the\n",
+    "                # timeout is reached.\n",
     "                timer = Timer(self.timeout, interrupt, [solver])\n",
     "                timer.start()\n",
     "                status = solver.solve_limited(expect_interrupt=True)\n",
@@ -466,14 +475,16 @@
     "                    f\"Layers: {num_layers}, Status: {status}, Time: {e_time}\"\n",
     "                )\n",
     "                if status:\n",
-    "                    # If the SAT problem is satisfiable, convert the solution to a mapping.\n",
+    "                    # If the SAT problem is satisfiable, convert the solution\n",
+    "                    # to a mapping.\n",
     "                    mapping = [vid2mapping[idx] for idx in sol if idx > 0]\n",
     "                    binary_search_results[num_layers] = SATResult(\n",
     "                        status, sol, mapping, e_time\n",
     "                    )\n",
     "                    max_layers = num_layers\n",
     "                else:\n",
-    "                    # If the SAT problem is unsatisfiable, return the last satisfiable solution.\n",
+    "                    # If the SAT problem is unsatisfiable, return the last\n",
+    "                    # satisfiable solution.\n",
     "                    binary_search_results[num_layers] = SATResult(\n",
     "                        status, sol, [], e_time\n",
     "                    )\n",
@@ -488,14 +499,16 @@
     "\n",
     "        Args:\n",
     "            graph (nx.Graph): The graph to remap.\n",
-    "            swap_strategy (SwapStrategy): The swap strategy to use to find the initial mapping.\n",
+    "            swap_strategy (SwapStrategy): The swap strategy to use\n",
+    "                                            to find the initial mapping.\n",
     "\n",
     "        Returns:\n",
-    "            tuple: A tuple containing the remapped graph, the edge map, and the number of layers of\n",
-    "            the swap strategy that was used to find the initial mapping. If no solution is found\n",
-    "            then the tuple contains None for each element.\n",
-    "            Note the returned edge map `{k: v}` means that node `k` in the original\n",
-    "            graph gets mapped to node `v` in the Pauli strings.\n",
+    "            tuple: A tuple containing the remapped graph, the edge map, and the\n",
+    "            number of layers of the swap strategy that was used to find the\n",
+    "            initial mapping. If no solution is found then the tuple contains\n",
+    "            None for each element. Note the returned edge map `{k: v}` means that\n",
+    "            node `k` in the original graph gets mapped to node `v` in the\n",
+    "            Pauli strings.\n",
     "        \"\"\"\n",
     "        num_nodes = len(graph.nodes())\n",
     "        results = self.find_initial_mappings(\n",
