--- a/docs/tutorials/improving-energy-estimation-of-a-fermionic-lattice-model-with-sqd.ipynb
+++ b/docs/tutorials/improving-energy-estimation-of-a-fermionic-lattice-model-with-sqd.ipynb
@@ -5,7 +5,7 @@
    "id": "f5789cd6-7bbb-4413-b238-877f88d5bda6",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore textrm varepsilon vecs pqrs ijkl */}\n",
+    "{/* cspell:ignore DMRG textrm varepsilon vecs pqrs ijkl */}\n",
     "\n",
     "# Improving energy estimation of a fermionic lattice model with SQD\n",
     "\n",
